--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   ],
   "dependencies": {
     "express": "^4.12.3",
+    "lodash": "^3.7.0",
     "meow": "^3.1.0",
     "request-promise": "^0.4.2"
   },
