--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "Node.js"
   ],
   "dependencies": {
+    "colors": "^1.0.3",
     "express": "^4.12.3",
+    "fs-extra": "^0.18.2",
     "lodash": "^3.7.0",
     "meow": "^3.1.0",
     "request-promise": "^0.4.2"
