--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "apich",
-  "version": "0.0.4",
-  "description": "A simple and modular API result cacher and transformer",
+  "name": "api-cache",
+  "version": "0.0.5",
+  "description": "A modular API result cacher and transformer CLI application",
   "author": {
     "name": "Simon Heimler",
     "email": "heimlersimon@gmail.com",
     "url": "http://www.fannon.de"
   },
-  "repository": "Fannon/apich",
+  "repository": "Fannon/api-cache",
   "license": "MIT",
   "files": [
     "cli.js"
   ],
   "bin": {
-    "apich": "cli.js"
+    "api-cache": "cli.js"
   },
   "preferGlobal": "true",
   "scripts": {
