--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "api-cache",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "A modular API result cacher and transformer CLI application",
   "author": {
     "name": "Simon Heimler",
@@ -28,6 +28,7 @@
     "colors": "^1.0.3",
     "express": "^4.12.3",
     "fs-extra": "^0.18.2",
+    "js-yaml": "^3.2.7",
     "lodash": "^3.7.0",
     "minimist": "^1.1.1",
     "request": "^2.55.0",
@@ -35,16 +36,16 @@
   },
   "devDependencies": {
     "grunt-cli": "^0.1.13",
-    "grunt-contrib-jshint": "^0.11.0",
+    "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-nodeunit": "^0.4.1",
     "grunt-contrib-watch": "^0.6.1",
     "chai": "^2.2.0",
     "mocha": "^2.2.4",
     "grunt-mocha-cli": "^1.13.0",
-    "grunt-mocha-istanbul": "^2.3.1",
+    "grunt-mocha-istanbul": "^2.4.0",
     "codeclimate-test-reporter": "0.0.4",
     "jshint-stylish": "^1.0.1",
     "load-grunt-tasks": "^3.1.0",
-    "time-grunt": "^1.1.0"
+    "time-grunt": "^1.1.1"
   }
 }
