* v0.3.2 * Better main entry point status feedback * Added / commented examples

--- a/examples/_settings.yaml
+++ b/examples/_settings.yaml
@@ -1,10 +1,17 @@
+# Set the request timeout to 16 seconds
 timeout: 16
+
+# If an error or timeout occures, retry after 5 seconds
 retryDelay: 5
+
+# Caches will be renewed after 180 seconds
 cacheExpiration: 180
+
+# Hold up to the latest 512 benchmark values
 benchmarkArraySize: 512
 
-debug: false
-prettyJson: true
+# More verbose loggging
+debug: true
 
-query:
-  url: http://10.248.8.1/wiki/api.php
+# Output pretty formatted / indented JSON
+prettyJson: true
