--- a/examples/BigCSV.yaml
+++ b/examples/BigCSV.yaml
@@ -1,6 +1,10 @@
+# Example: Cache a big CSV file
+
 cacheExpiration: 180
 timeout: 180
 retryDelay: 30
 
+# Use a regular HTTP request
 http:
-  url: https://data.cityofnewyork.us/api/views/5b3a-rs48/rows.csv?accessType=DOWNLOAD
+    # And cache the following URL:
+    url: https://data.cityofnewyork.us/api/views/5b3a-rs48/rows.csv?accessType=DOWNLOAD
