--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "js-yaml": "^3.2.7",
     "lodash": "^3.7.0",
     "minimist": "^1.1.1",
+    "prettysize": "0.0.3",
     "request": "^2.55.0",
     "request-promise": "^0.4.2"
   },
