--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cacheur",
-  "version": "0.3.3",
+  "version": "0.3.4",
   "description": "A modular HTTP / API result cacher and transformer that runs as a CLI application",
   "author": {
     "name": "Simon Heimler",
@@ -25,18 +25,18 @@
     "Node.js"
   ],
   "dependencies": {
-    "colors": "^1.0.3",
     "express": "^4.12.3",
     "fs-extra": "^0.18.2",
-    "js-yaml": "^3.2.7",
+    "js-yaml": "^3.3.0",
     "lodash": "^3.7.0",
     "minimist": "^1.1.1",
     "prettysize": "0.0.3",
     "request": "^2.55.0",
-    "request-promise": "^0.4.2"
+    "request-promise": "^0.4.2",
+    "semlog": "^0.1.2"
   },
   "devDependencies": {
-    "chai": "^2.2.0",
+    "chai": "^2.3.0",
     "codeclimate-test-reporter": "0.0.4",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-jshint": "^0.11.2",
