--- a/examples/BigCSV.yaml
+++ b/examples/BigCSV.yaml
@@ -1,4 +1,6 @@
 # Example: Cache a big CSV file
+title: Big CSV example
+description: Loading a bigger CSV file into memory
 
 cacheExpiration: 180
 timeout: 180
