--- a/package.json
+++ b/package.json
@@ -1,52 +1,53 @@
 {
-    "name": "cacheur",
-    "version": "0.5.0",
-    "description": "A modular HTTP / API result cacher and transformer that runs as a CLI application",
-    "author": {
-        "name": "Simon Heimler",
-        "email": "heimlersimon@gmail.com",
-        "url": "http://www.fannon.de"
-    },
-    "repository": "Fannon/cacheur",
-    "license": "MIT",
-    "bin": {
-        "cacheur": "cli.js"
-    },
-    "preferGlobal": "true",
-    "scripts": {
-        "test": "grunt"
-    },
-    "keywords": [
-        "caching",
-        "API",
-        "Semantic MediaWiki",
-        "SMW",
-        "Caching",
-        "Node.js"
-    ],
-    "dependencies": {
-        "express": "^4.12.4",
-        "fs-extra": "^0.18.3",
-        "js-yaml": "^3.3.1",
-        "lodash": "^3.8.0",
-        "minimist": "^1.1.1",
-        "request": "^2.55.0",
-        "request-promise": "^0.4.2",
-        "semlog": "^0.2.3"
-    },
-    "devDependencies": {
-        "chai": "^2.3.0",
-        "codeclimate-test-reporter": "0.0.4",
-        "grunt-cli": "^0.1.13",
-        "grunt-contrib-jshint": "^0.11.2",
-        "grunt-contrib-nodeunit": "^0.4.1",
-        "grunt-contrib-watch": "^0.6.1",
-        "grunt-jscs": "^1.8.0",
-        "grunt-mocha-cli": "^1.13.0",
-        "grunt-mocha-istanbul": "^2.4.0",
-        "jshint-stylish": "^1.0.2",
-        "load-grunt-tasks": "^3.1.0",
-        "mocha": "^2.2.5",
-        "time-grunt": "^1.2.0"
-    }
+  "name": "cacheur",
+  "version": "0.5.0",
+  "description": "A modular HTTP / API result cacher and transformer that runs as a CLI application",
+  "author": {
+    "name": "Simon Heimler",
+    "email": "heimlersimon@gmail.com",
+    "url": "http://www.fannon.de"
+  },
+  "repository": "Fannon/cacheur",
+  "license": "MIT",
+  "bin": {
+    "cacheur": "cli.js"
+  },
+  "preferGlobal": "true",
+  "scripts": {
+    "test": "grunt"
+  },
+  "keywords": [
+    "caching",
+    "API",
+    "Semantic MediaWiki",
+    "SMW",
+    "Caching",
+    "Node.js"
+  ],
+  "dependencies": {
+    "diff": "^1.4.0",
+    "express": "^4.12.4",
+    "fs-extra": "^0.18.3",
+    "js-yaml": "^3.3.1",
+    "lodash": "^3.8.0",
+    "minimist": "^1.1.1",
+    "request": "^2.55.0",
+    "request-promise": "^0.4.2",
+    "semlog": "^0.2.3"
+  },
+  "devDependencies": {
+    "chai": "^2.3.0",
+    "codeclimate-test-reporter": "0.0.4",
+    "grunt-cli": "^0.1.13",
+    "grunt-contrib-jshint": "^0.11.2",
+    "grunt-contrib-nodeunit": "^0.4.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-jscs": "^1.8.0",
+    "grunt-mocha-cli": "^1.13.0",
+    "grunt-mocha-istanbul": "^2.4.0",
+    "jshint-stylish": "^1.0.2",
+    "load-grunt-tasks": "^3.1.0",
+    "mocha": "^2.2.5",
+    "time-grunt": "^1.2.0"
+  }
 }
