--- a/examples/localhost-example.yaml
+++ b/examples/localhost-example.yaml
@@ -4,7 +4,7 @@ fetchInterval: 5
 # Use a regular HTTP Request
 http:
     # Use the following URL
-      url: http://beta.json-generator.com/api/json/get/Ey-WYeqF
+      url: http://localhost:8080/example.json
 
 
 
