--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cacheur",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "description": "A modular HTTP / API result cacher and transformer that runs as a CLI application",
   "author": {
     "name": "Simon Heimler",
@@ -26,28 +26,29 @@
   ],
   "dependencies": {
     "diff": "^1.4.0",
-    "express": "^4.12.4",
-    "fs-extra": "^0.18.3",
+    "elasticsearch": "^5.0.0",
+    "express": "^4.13.1",
+    "fs-extra": "^0.22.1",
     "js-yaml": "^3.3.1",
-    "lodash": "^3.8.0",
-    "minimist": "^1.1.1",
-    "request": "^2.55.0",
+    "lodash": "^3.10.0",
+    "minimist": "^1.1.2",
+    "request": "^2.60.0",
     "request-promise": "^0.4.2",
-    "semlog": "^0.2.3"
+    "semlog": "^0.3.3"
   },
   "devDependencies": {
-    "chai": "^2.3.0",
-    "codeclimate-test-reporter": "0.0.4",
+    "chai": "^3.2.0",
+    "codeclimate-test-reporter": "0.1.0",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-nodeunit": "^0.4.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-jscs": "^1.8.0",
-    "grunt-mocha-cli": "^1.13.0",
+    "grunt-mocha-cli": "^1.13.1",
     "grunt-mocha-istanbul": "^2.4.0",
-    "jshint-stylish": "^1.0.2",
-    "load-grunt-tasks": "^3.1.0",
+    "jshint-stylish": "^2.0.1",
+    "load-grunt-tasks": "^3.2.0",
     "mocha": "^2.2.5",
-    "time-grunt": "^1.2.0"
+    "time-grunt": "^1.2.1"
   }
 }
